@@ -49,7 +49,7 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl uses socket factory to create a new socket on connect`() {
+    fun `uses socket factory to create a new socket on connect`() {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
@@ -58,7 +58,7 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl uses socket factory to create a new tls on connect`() {
+    fun `uses socket factory to create a new tls on connect`() {
         val client = IrcClientImpl(Server(HOST, PORT, true), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
@@ -67,7 +67,7 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl throws if socket already exists`() {
+    fun `throws if socket already exists`() {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
@@ -78,7 +78,7 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl emits connection events with local time`() = runBlocking {
+    fun `emits connection events with local time`() = runBlocking {
         currentTimeProvider = { TestConstants.time }
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
@@ -96,28 +96,25 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl emits disconnected event with local time when read channel closed`() = runBlocking {
+    fun `emits disconnected event with local time when read channel closed`() = runBlocking {
         currentTimeProvider = { TestConstants.time }
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
-        client.blockUntilConnected()
 
         client.onEvent(mockEventHandler)
         readLineChannel.close()
 
         val captor = argumentCaptor<ServerDisconnected>()
-        verify(mockEventHandler, timeout(500)).invoke(captor.capture())
+        verify(mockEventHandler, timeout(500).atLeast(2)).invoke(captor.capture())
         assertEquals(TestConstants.time, captor.lastValue.time)
     }
 
     @Test
-    fun `IrcClientImpl sends basic connection strings`() = runBlocking {
+    fun `sends basic connection strings`() = runBlocking {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
-
-        client.blockUntilConnected()
 
         assertEquals("CAP LS 302", String(sendLineChannel.receive()))
         assertEquals("NICK :$NICK", String(sendLineChannel.receive()))
@@ -125,19 +122,17 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl sends password first, when present`() = runBlocking {
+    fun `sends password first, when present`() = runBlocking {
         val client = IrcClientImpl(Server(HOST, PORT, password = PASSWORD), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
-
-        client.blockUntilConnected()
 
         assertEquals("CAP LS 302", String(sendLineChannel.receive()))
         assertEquals("PASS :$PASSWORD", String(sendLineChannel.receive()))
     }
 
     @Test
-    fun `IrcClientImpl sends events to provided event handler`() {
+    fun `sends events to provided event handler`() {
         val client = IrcClientImpl(Server(HOST, PORT, password = PASSWORD), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.onEvent(mockEventHandler)
@@ -152,14 +147,14 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClient gets case mapping from server features`() {
+    fun `gets case mapping from server features`() {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.serverState.features[ServerFeature.ServerCaseMapping] = CaseMapping.RfcStrict
         assertEquals(CaseMapping.RfcStrict, client.caseMapping)
     }
 
     @Test
-    fun `IrcClient indicates if user is local user or not`() {
+    fun `indicates if user is local user or not`() {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.serverState.localNickname = "[acidBurn]"
 
@@ -168,7 +163,7 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClient indicates if nickname is local user or not`() {
+    fun `indicates if nickname is local user or not`() {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.serverState.localNickname = "[acidBurn]"
 
@@ -177,7 +172,7 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClient uses current case mapping to check local user`() {
+    fun `uses current case mapping to check local user`() {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.serverState.localNickname = "[acidBurn]"
         client.serverState.features[ServerFeature.ServerCaseMapping] = CaseMapping.Ascii
@@ -185,12 +180,10 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl sends text to socket`() = runBlocking {
+    fun `sends text to socket`() = runBlocking {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
-
-        client.blockUntilConnected()
 
         client.send("testing 123")
 
@@ -207,12 +200,10 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl disconnects the socket`() = runBlocking {
+    fun `disconnects the socket`() = runBlocking {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
-
-        client.blockUntilConnected()
 
         client.disconnect()
 
@@ -220,12 +211,10 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl sends messages in order`() = runBlocking {
+    fun `sends messages in order`() = runBlocking {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         client.socketFactory = mockSocketFactory
         client.connect()
-
-        client.blockUntilConnected()
 
         (0..100).forEach { client.send("TEST $it") }
 
@@ -242,21 +231,28 @@ internal class IrcClientImplTest {
     }
 
     @Test
-    fun `IrcClientImpl defaults local nickname to profile`() = runBlocking {
+    fun `defaults local nickname to profile`() = runBlocking {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         assertEquals(NICK, client.serverState.localNickname)
     }
 
     @Test
-    fun `IrcClientImpl defaults server name to host name`() = runBlocking {
+    fun `defaults server name to host name`() = runBlocking {
         val client = IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))
         assertEquals(HOST, client.serverState.serverName)
     }
 
-    private suspend fun IrcClientImpl.blockUntilConnected() {
-        // Yuck. Maybe connect should be asynchronous?
-        while (serverState.status <= ServerStatus.Connecting) {
-            delay(50)
+    @Test
+    fun `reset clears all state`() {
+        with (IrcClientImpl(Server(HOST, PORT), Profile(NICK, REAL_NAME, USER_NAME))) {
+            userState += User("acidBurn")
+            channelState += ChannelState("#thegibson") { CaseMapping.Rfc }
+            serverState.serverName = "root.$HOST"
+            reset()
+
+            assertEquals(0, userState.count())
+            assertEquals(0, channelState.count())
+            assertEquals(HOST, serverState.serverName)
         }
     }
 
