@@ -7,26 +7,26 @@ import org.junit.jupiter.api.Test
 internal class ServerFeatureMapTest {
 
     @Test
-    fun `ServerFeatureMap should return defaults for unspecified features`() {
+    fun `should return defaults for unspecified features`() {
         val featureMap = ServerFeatureMap()
         assertEquals(200, featureMap[ServerFeature.MaximumChannelNameLength])
     }
 
     @Test
-    fun `ServerFeatureMap should return null for unspecified features with no default`() {
+    fun `should return null for unspecified features with no default`() {
         val featureMap = ServerFeatureMap()
         assertNull(featureMap[ServerFeature.ChannelModes])
     }
 
     @Test
-    fun `ServerFeatureMap should return previously set value for features`() {
+    fun `should return previously set value for features`() {
         val featureMap = ServerFeatureMap()
         featureMap[ServerFeature.MaximumChannels] = 123
         assertEquals(123, featureMap[ServerFeature.MaximumChannels])
     }
 
     @Test
-    fun `ServerFeatureMap should return default set value for features that were reset`() {
+    fun `should return default set value for features that were reset`() {
         val featureMap = ServerFeatureMap()
         featureMap[ServerFeature.MaximumChannels] = 123
         featureMap.reset(ServerFeature.MaximumChannels)
@@ -34,7 +34,7 @@ internal class ServerFeatureMapTest {
     }
 
     @Test
-    fun `ServerFeatureMap should throw if a feature is set with the wrong type`() {
+    fun `should throw if a feature is set with the wrong type`() {
         val featureMap = ServerFeatureMap()
         assertThrows(IllegalArgumentException::class.java) {
             featureMap[ServerFeature.MaximumChannels] = "123"
@@ -42,7 +42,7 @@ internal class ServerFeatureMapTest {
     }
 
     @Test
-    fun `ServerFeatureMap sets all features from another map`() {
+    fun `sets all features from another map`() {
         val featureMap1 = ServerFeatureMap()
         val featureMap2 = ServerFeatureMap()
         featureMap2[ServerFeature.WhoxSupport] = true
@@ -53,9 +53,8 @@ internal class ServerFeatureMapTest {
         assertArrayEquals(arrayOf("abc", "def"), featureMap1[ServerFeature.ChannelModes])
     }
 
-
     @Test
-    fun `ServerFeatureMap resets features reset in another map`() {
+    fun `resets features reset in another map`() {
         val featureMap1 = ServerFeatureMap()
         val featureMap2 = ServerFeatureMap()
         featureMap1[ServerFeature.ServerCaseMapping] = CaseMapping.RfcStrict
@@ -63,6 +62,23 @@ internal class ServerFeatureMapTest {
         featureMap1.setAll(featureMap2)
 
         assertEquals(CaseMapping.Rfc, featureMap1[ServerFeature.ServerCaseMapping])
+    }
+
+    @Test
+    fun `clear removes all features`() {
+        val featureMap = ServerFeatureMap()
+        featureMap[ServerFeature.MaximumChannels] = 123
+        featureMap[ServerFeature.Network] = "testnet"
+        featureMap.clear()
+        assertTrue(featureMap.isEmpty())
+    }
+
+    @Test
+    fun `isEmpty returns true if empty`() {
+        val featureMap = ServerFeatureMap()
+        assertTrue(featureMap.isEmpty())
+        featureMap[ServerFeature.MaximumChannels] = 123
+        assertFalse(featureMap.isEmpty())
     }
     
 }
